crates/compiler/src/tests/e2e/good/0422_generic_type_usage/main.gom
fn outer[T](x: T) -> T {
    let result = inner(x);
    result
}

fn inner[T](y: T) -> T {
    y
}

fn main() {
    println(outer(42).to_string());
    println(outer("hello"));
}
