crates/compiler/src/tests/e2e/bad/0007_compare_different_types/main.gom
fn main() -> unit {
  let n = 42;
  let s = "hello";
  if n == s {
    println("equal")
  } else {
    println("not equal")
  }
}
